typo: fake decoder (missing var_AddCallback)
In the file modules/codec/fake.c, var_AddCallback has been forgotten for the fake-file-reload variable (callback exists in the FakeCallback function)
The following line should be inserted (most likely at line 172 of modules/codec/fake.c) :
var_AddCallback( p_dec, "fake-file-reload", FakeCallback , p_dec );
(true for both VLC 0.9.4 and GIT version accessible via trac)