[Fake] Add a missing callback on fake-file-reload

When fake-file-reload is changed, you might want to renew the image.
Should Close #2230